--- a/FKW/index.html
+++ b/FKW/index.html
@@ -17,8 +17,8 @@
     <nav>
       <a href="#" class="logo">FKW</a>
       <div class="nav-items">
-        <a class="nav-link" href="#1">Beranda</a>
-        <a class="nav-link" href="#2">Tentang Kami</a>
+        <a class="nav-link" href="#beranda">Beranda</a>
+        <a class="nav-link" href="#tentang-kami">Tentang Kami</a>
         <a class="nav-link" href="#cta">Arsip</a>
       </div>
 
@@ -28,14 +28,14 @@
     </nav>
 
     <div class="mobile-nav-menu">
-      <a class="nav-link" href="#1">Beranda</a>
-      <a class="nav-link" href="#2">Tentang Kami</a>
+      <a class="nav-link" href="#beranda">Beranda</a>
+      <a class="nav-link" href="#tentang-kami">Tentang Kami</a>
       <a class="nav-link" href="#cta">Arsip</a>
     </div>
 
     <header>
-      <div class="container" id="1">
-        <section id="beranda">
+      <div class="container" id="beranda">
+        <section>
         <div class="left">
           <img src="images/FKWLogo .png" alt="" />
           <h1>Festival Karma Wairagya</h1>
@@ -61,7 +61,7 @@
       </div>
     </header>
 
-    <div class="container" id="2">
+    <div class="container" id="tentang-">
       <section id="poto">
         <div class="content">
           <div class="pic">
@@ -72,107 +72,22 @@
           </div>
         </div>
       </section>
-
+      <section id="tentang-kami"></section>
       <section id="tentang">
         <h2>Tentang Kami</h2>
-        <div class="content">
+        <div class="left">
+          <p>Festival Karma Wairagya merupakan festival yang diadakan setahun sekali untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
+            Tujuan lain diadakannya festival ini yaitu untuk meningkatkan kemampuan siswa dan siswi untuk berkreativitas, melestarikan dan menonjolkan nilai
+            nilai budaya, serta memberikan kesempatan menunjukkan bakat bagi siswa dan siswi SMA Negeri 9 Denpasar untuk menjadi penampil acara pada puncak
+            acara Festival Karma Wairagya. Festival ini pertama kali dilaksanakan pada tahun 2022 untuk memeriahkan HUT SMA Negeri 9 Denpasar yang ke-2. 
+            Nama kegiatan ini bertajuk "Festival Karma Wairagya" yang sesuai dengan motto SMA Negeri 9 Denpasar, yaitu Karma Wairagya, yang memiliki makna bekerja tanpa mengikatkan diri pada hasil.
+          </p>
         </div>
       </section>
 
       <section id="arsip">
         <div class="content">
-          <div class="left">
-            <h2>What our customers say about the app</h2>
-            <p>There are already more than 100k+ customers using our app.</p>
-          </div>
-
-          <div class="right">
-            <div class="testimonial-card">
-              <span class="quote-icon">
-                <img src="images/quote-icon.svg" alt="" />
-              </span>
-
-              <p class="review">
-                Since I started using the app, my productivity has skyrocketed.
-                The reminder feature keeps me on track. Highly recommended!
-              </p>
-
-              <div class="reviewer-info">
-                <div class="image">
-                  <img src="images/testimonial1.png" alt="" />
-                </div>
-
-                <div class="details">
-                  <div class="name">John Smith</div>
-                  <div class="designation">Tech Lead, Amazon</div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-
-        <div class="navigation-btns">
-          <div class="prev-btn">
-            <img src="images/chevron-left.svg" alt="" />
-          </div>
-          <div class="next-btn">
-            <img src="images/chevron-right.svg" alt="" />
-          </div>
-        </div>
-
-        <span class="bg-element"></span>
-      </section>
-
-      <section id="pricing">
-        <h2>Flexible Pricing Options</h2>
-        <div class="content">
-          <!-- <div class="plan">
-            <h4 class="plan-name">Basic</h4>
-            <ul class="plan-features">
-              <li>50 Tasks</li>
-              <li>Deadline Tracking</li>
-              <li>Priority Settings</li>
-              <li>Basic Reporting</li>
-              <li>Email Notifications</li>
-              <li>24/7 Customer Support</li>
-            </ul>
-            <div class="plan-price">Free</div>
-            <a href="#" class="btn">Choose</a>
-          </div> -->
-        </div>
-      </section>
-
-      <section id="cta">
-        <h2>Get Started Today</h2>
-        <div class="content">
-          <p>
-            Take control of your tasks and boost your productivity. Get started
-            today and experience the power of efficient task management
-          </p>
-
-          <div class="buttons">
-            <a href="#" class="download-btn">
-              <div class="btn-icon">
-                <img src="images/appstore-logo.svg" alt="" />
-              </div>
-              <div class="btn-text">
-                <div>Get It On</div>
-                <div>App Store</div>
-              </div>
-            </a>
-
-            <a href="#" class="download-btn">
-              <div class="btn-icon">
-                <img src="images/google-play-icon.svg" alt="" />
-              </div>
-              <div class="btn-text">
-                <div>Download It On</div>
-                <div>Google Play</div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
     </div>
 
     <footer>
