fix footer and poto frame

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -130,16 +130,45 @@
       <div class="container">
         <div class="content">
           <div class="left">
-            <div class="logo">FKW</div>
-            <p>Festival Karma Wairagya</p>
+            <img src="/images/FKWLogo .png" height="200px">
           </div>
 
           <div class="right">
+            <div class="links">
+              <h3>Tautan Cepat</h3>
+              <ul>
+                <li>
+                  <a href="https://sman9denpasar.sch.id/" target="_blank">SMAN 9 Denpasar</a>
+                </li>
+
+                <li>
+                  <a href="#" target="_blank">Kebijakan Privasi</a>
+                </li>
+
+                <li>
+                  <a href="#" target="_blank">Syarat & Ketentuan</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="links">
+              <h3>SMAN 9 DENPASAR</h3>
+              <ul>
+                <li>Jl. W.R Supratman No. 255,</li>
+                <li> Desa Kertalangu, Kesiman,</li>
+                <li>Kecamatan Denpasar Timur,</li>
+                <li> Kota Denpasar, Bali, Indonesia. 80237</li>
+                <li>smansia9dps@gmail.com</li>
+              </ul>
+            </div>
           </div>
         </div>
 
         <div class="copyright">
           <p>Designed by Tim Industri Digital FKW © 2024</p>
+          <div class="socials">
+            <a href="#"><img src="images/instagram-logo.svg" alt="" /></a>
+          </div>
         </div>
       </div>
     </footer>
