fix some color, and change some pict

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -76,16 +76,16 @@
       <section id="poto">
         <div class="content">
           <div class="pic">
-            <img src="images/Foto1.JPG" alt="" />
-            <img src="images/Foto2.JPG" alt="" />
-            <img src="images/Foto3.JPG" alt="" />
-            <img src="images/Foto4.JPG" alt="" />
+            <img src="images/Foto1.JPG"/>
+            <img src="images/Foto2.JPG"/>
+            <img src="images/Foto3.JPG"/>
+            <img src="images/Foto4.JPG"/>
+            <img src="images/Foto5.JPG"/>
           </div>
         </div>
       </section>
       <section id="tentang-kami"></section>
       <section id="tentang">
-        <h2>Tentang Kami</h2>
         <div class="left">
           <p>Festival Karma Wairagya (FKW) merupakan festival yang diadakan setahun sekali untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
             Tujuan lain diadakannya festival ini yaitu untuk meningkatkan kemampuan siswa dan siswi untuk berkreativitas, melestarikan dan menonjolkan nilai
@@ -96,41 +96,41 @@
         </div>
       </section>
 
-    <div class="container" id="galeri">
-      <section id="gallery">
-        <h2>Galeri FKW</h2>
-        <h4>2022</h4>
-        <div class="slider-wrapper">
-          <button id="prev-slide" class="slide-button material-symbols-rounded">chevron_left</button>
-          <div class="album-list">
-            <video autoplay muted controls id="yt-video" src="/videos/2022.mp4" alt= "itm-1" class="album-item"></video>
-            <img src="images/Foto.png" alt="itm-2" class="album-item">
-            <img src="images/Foto.png" alt="itm-3" class="album-item">
-            <img src="images/Foto.png" alt="itm-4" class="album-item">
-            <img src="images/Foto.png" alt="itm-5" class="album-item">
-            <img src="images/Foto.png" alt="itm-6" class="album-item">
-            <img src="images/Foto.png" alt="itm-7" class="album-item">
-            <img src="images/Foto.png" alt="itm-8" class="album-item">
-            <img src="images/Foto.png" alt="itm-9" class="album-item">
-            <img src="images/Foto.png" alt="itm-10" class="album-item">
-            <img src="images/Foto.png" alt="itm-11" class="album-item">
+      <div class="container" id="galeri">
+        <section id="gallery">
+          <h2>Galeri FKW</h2>
+          <h4>2022</h4>
+          <div class="slider-wrapper">
+            <button id="prev-slide" class="slide-button material-symbols-rounded">chevron_left</button>
+            <div class="album-list">
+              <video autoplay muted controls id="yt-video" src="/videos/2022.mp4" alt= "itm-1" class="album-item"></video>
+              <img src="images/Foto.png" alt="itm-2" class="album-item">
+              <img src="images/Foto.png" alt="itm-3" class="album-item">
+              <img src="images/Foto.png" alt="itm-4" class="album-item">
+              <img src="images/Foto.png" alt="itm-5" class="album-item">
+              <img src="images/Foto.png" alt="itm-6" class="album-item">
+              <img src="images/Foto.png" alt="itm-7" class="album-item">
+              <img src="images/Foto.png" alt="itm-8" class="album-item">
+              <img src="images/Foto.png" alt="itm-9" class="album-item">
+              <img src="images/Foto.png" alt="itm-10" class="album-item">
+              <img src="images/Foto.png" alt="itm-11" class="album-item">
+            </div>
+            <button id="next-slide" class="slide-button material-symbols-rounded">chevron_right</button>
           </div>
-          <button id="next-slide" class="slide-button material-symbols-rounded">chevron_right</button>
-        </div>
-        <div class="slider-scrollbar">
-          <div class="scrollbar-track">
-            <div class="scrollbar-thumb"></div>
+          <div class="slider-scrollbar">
+            <div class="scrollbar-track">
+              <div class="scrollbar-thumb"></div>
+            </div>
           </div>
-        </div>
-      </section>
-    </div>
-    </div>
+        </section>
+      </div>
+      </div>
 
     <footer>
       <div class="container">
         <div class="content">
           <div class="left">
-            <img src="/images/FKWLogo .png" height="200px">
+            <img src="images/FKWLogo .png" height="200px">
           </div>
 
           <div class="right">
@@ -140,11 +140,9 @@
                 <li>
                   <a href="https://sman9denpasar.sch.id/" target="_blank">SMAN 9 Denpasar</a>
                 </li>
-
                 <li>
                   <a href="#" target="_blank">Kebijakan Privasi</a>
                 </li>
-
                 <li>
                   <a href="#" target="_blank">Syarat & Ketentuan</a>
                 </li>
@@ -154,11 +152,10 @@
             <div class="links">
               <h3>SMAN 9 DENPASAR</h3>
               <ul>
-                <li>Jl. W.R Supratman No. 255,</li>
-                <li> Desa Kertalangu, Kesiman,</li>
-                <li>Kecamatan Denpasar Timur,</li>
-                <li> Kota Denpasar, Bali, Indonesia. 80237</li>
-                <li>smansia9dps@gmail.com</li>
+                <li>Jl. W.R Supratman No. 255</li>
+                <li>Desa Kertalangu, Kesiman,</li>
+                <li>Denpasar Timur, Bali, Indonesia. 80237</li>
+                smansia9dps@gmail.com</li>
               </ul>
             </div>
           </div>
@@ -167,7 +164,8 @@
         <div class="copyright">
           <p>Designed by Tim Industri Digital FKW © 2024</p>
           <div class="socials">
-            <a href="#"><img src="images/instagram-logo.svg" alt="" /></a>
+            <a href="https://www.instagram.com/festivalkarmawairagya" target="_blank"><img src="images/instagram-logo.svg" alt="" /></a>
+            <a href="https://www.youtube.com/@festivalkarmawairagya" target="_blank"><img src="images/youtube-logo.svg" alt="" /></a>
           </div>
         </div>
       </div>
