--- a/FKW/index.html
+++ b/FKW/index.html
@@ -14,14 +14,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
+    <script src="script2.js" defer></script>
   </head>
   <body>
     <nav>
       <a href="#" class="logo">FKW</a>
       <div class="nav-items">
-        <a class="nav-link" href="#beranda">Beranda</a>
-        <a class="nav-link" href="#tentang-kami">Tentang Kami</a>
-        <a class="nav-link" href="#galeri">Galeri</a>
+        <a class="nav-link" href="#tentang-kami">About Us</a>
+        <a class="nav-link" href="#galeri">Gallery</a>
+        <a class="nav-link" href="#contact">Contact</a>
       </div>
 
       <div class="menu-icon">
@@ -30,9 +31,8 @@
     </nav>
 
     <div class="mobile-nav-menu">
-      <a class="nav-link" href="#beranda">Beranda</a>
-      <a class="nav-link" href="#tentang-kami">Tentang Kami</a>
-      <a class="nav-link" href="#galeri">Galeri</a>
+      <a class="nav-link" href="#tentang-kami">About Us</a>
+      <a class="nav-link" href="#galeri">Gallery</a>
     </div>
 
     <header>
@@ -72,7 +72,7 @@
       </div>
     </header>
 
-    <div class="container" id="tentang-">
+    <div id="tentang-">
       <section id="poto">
         <div class="content">
           <div class="pic">
@@ -87,6 +87,7 @@
       <section id="tentang-kami"></section>
       <section id="tentang">
         <div class="left">
+          <h2>FKW</h2>
           <p>Festival Karma Wairagya (FKW) merupakan festival yang diadakan setahun sekali untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
             Tujuan lain diadakannya festival ini yaitu untuk meningkatkan kemampuan siswa dan siswi untuk berkreativitas, melestarikan dan menonjolkan nilai
             nilai budaya, serta memberikan kesempatan menunjukkan bakat bagi siswa dan siswi SMA Negeri 9 Denpasar untuk menjadi penampil acara pada puncak
@@ -96,14 +97,14 @@
         </div>
       </section>
 
-      <div class="container" id="galeri">
+      <div id="galeri">
         <section id="gallery">
-          <h2>Galeri FKW</h2>
+          <h2>GALLERY</h2>
           <h4>2022</h4>
           <div class="slider-wrapper">
             <button id="prev-slide" class="slide-button material-symbols-rounded">chevron_left</button>
             <div class="album-list">
-              <video autoplay muted controls id="yt-video" src="/videos/2022.mp4" alt= "itm-1" class="album-item"></video>
+              <video autoplay loop muted controls id="yt-video" src="/videos/2022.mp4" alt= "itm-1" class="album-item"></video>
               <img src="images/Foto.png" alt="itm-2" class="album-item">
               <img src="images/Foto.png" alt="itm-3" class="album-item">
               <img src="images/Foto.png" alt="itm-4" class="album-item">
@@ -122,12 +123,39 @@
               <div class="scrollbar-thumb"></div>
             </div>
           </div>
+
+          <h4>2023</h4>
+          <div class="slider-wrapper2">
+            <button id="prev-slide2" class="slide-button2 material-symbols-rounded">chevron_left</button>
+            <div class="album-list2">
+              <video autoplay loop muted controls id="yt-video" src="/videos/2022.mp4" alt= "itm-1" class="album-item2"></video>
+              <img src="images/Foto.png" alt="itm-2" class="album-item2">
+              <img src="images/Foto.png" alt="itm-3" class="album-item2">
+              <img src="images/Foto.png" alt="itm-4" class="album-item2">
+              <img src="images/Foto.png" alt="itm-5" class="album-item2">
+              <img src="images/Foto.png" alt="itm-6" class="album-item2">
+              <img src="images/Foto.png" alt="itm-7" class="album-item2">
+              <img src="images/Foto.png" alt="itm-8" class="album-item2">
+              <img src="images/Foto.png" alt="itm-9" class="album-item2">
+              <img src="images/Foto.png" alt="itm-10" class="album-item2">
+              <img src="images/Foto.png" alt="itm-11" class="album-item2">
+            </div>
+            <button id="next-slide2" class="slide-button2 material-symbols-rounded">chevron_right</button>
+          </div>
+          <div class="slider-scrollbar2">
+            <div class="scrollbar-track2">
+              <div class="scrollbar-thumb2"></div>
+            </div>
+          </div>
+
+          <h4>2024 (Coming Soon)</h4>
+
         </section>
       </div>
       </div>
 
     <footer>
-      <div class="container">
+      <div id="contact" class="container">
         <div class="content">
           <div class="left">
             <img src="images/FKWLogo .png" height="200px">
@@ -135,16 +163,16 @@
 
           <div class="right">
             <div class="links">
-              <h3>Tautan Cepat</h3>
+              <h3>Quick Link</h3>
               <ul>
                 <li>
                   <a href="https://sman9denpasar.sch.id/" target="_blank">SMAN 9 Denpasar</a>
                 </li>
                 <li>
-                  <a href="#" target="_blank">Kebijakan Privasi</a>
+                  <a href="#" target="_blank">Privacy Policy</a>
                 </li>
                 <li>
-                  <a href="#" target="_blank">Syarat & Ketentuan</a>
+                  <a href="#" target="_blank">Terms & Conditions</a>
                 </li>
               </ul>
             </div>
