Add about us, change nav bar, make responsive

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -20,7 +20,7 @@
     <nav>
       <a href="#" class="logo">FKW</a>
       <div class="nav-items">
-        <a class="nav-link" href="#tentang-kami">About Us</a>
+        <a class="nav-link" href="#tentang-kami">About</a>
         <a class="nav-link" href="#galeri">Gallery</a>
         <a class="nav-link" href="#contact">Contact</a>
       </div>
@@ -31,8 +31,9 @@
     </nav>
 
     <div class="mobile-nav-menu">
-      <a class="nav-link" href="#tentang-kami">About Us</a>
+      <a class="nav-link" href="#tentang-kami">About</a>
       <a class="nav-link" href="#galeri">Gallery</a>
+      <a class="nav-link" href="#contact">Contact</a>
     </div>
 
     <header>
@@ -42,7 +43,7 @@
           <img src="images/FKWLogo .png" alt="" />
           <h1>Festival Karma Wairagya</h1>
           <p>
-            Festival Karma Wairagya merupakan festival yang diadakan setahun sekali untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar.
+            Festival Karma Wairagya merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar.
           </p>
 
           <div class="buttons">
@@ -85,17 +86,23 @@
         </div>
       </section>
       <section id="tentang-kami"></section>
+      <div class="hp"><img id="hp2"src="images/FKWElemen.png" alt=""></div>
       <section id="tentang">
-        <div class="left">
-          <h2>FKW</h2>
-          <p>Festival Karma Wairagya (FKW) merupakan festival yang diadakan setahun sekali untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
+        <div class="left"><img src="images/FKWElemen.png" alt=""></div>
+        <div class="right">
+          <p>Festival Karma Wairagya (FKW) merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
             Tujuan lain diadakannya festival ini yaitu untuk meningkatkan kemampuan siswa dan siswi untuk berkreativitas, melestarikan dan menonjolkan nilai
             nilai budaya, serta memberikan kesempatan menunjukkan bakat bagi siswa dan siswi SMA Negeri 9 Denpasar untuk menjadi penampil acara pada puncak
-            acara Festival Karma Wairagya. Festival ini pertama kali dilaksanakan pada tahun 2022 untuk memeriahkan HUT SMA Negeri 9 Denpasar yang ke-2. 
-            Nama kegiatan ini bertajuk "Festival Karma Wairagya" yang sesuai dengan motto SMA Negeri 9 Denpasar, yaitu Karma Wairagya, yang memiliki makna bekerja tanpa mengikatkan diri pada hasil.
+            acara Festival Karma Wairagya. Festival ini pertama kali dilaksanakan pada tahun 2022 untuk memeriahkan HUT SMA Negeri 9 Denpasar yang ke-2.
+            Ditahun ini SMA Negeri 9 Denpasar akan menyelenggarakan Festival Karma Wairagya yang ke-4. Nama kegiatan "Festival Karma Wairagya" tercipta sesuai dengan motto SMA Negeri 9 Denpasar, yaitu Karma Wairagya, yang memiliki makna bekerja tanpa mengikatkan diri pada hasil.
           </p>
         </div>
       </section>
+
+        <div id="trabaju">
+          <video autoplay loop muted controls id="transisi" src="videos/transisi.mp4"></video>
+          <img src="images/desainbaju.png" id="baju">
+        </div>
 
       <div id="galeri">
         <section id="gallery">
