adding preload, add lazy load, edit responsive

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -17,6 +17,9 @@
     <script src="script2.js" defer></script>
   </head>
   <body>
+
+    <div id="pre-loader"></div>
+
     <nav>
       <a href="#" class="logo">FKW</a>
       <div class="nav-items">
@@ -40,7 +43,7 @@
       <div class="container" id="beranda">
         <section>
         <div class="left">
-          <img src="images/FKWLogo .png" alt="" />
+          <img src="images/FKWLogo .png" alt="Logo FKW" loading="lazy"/>
           <h1>Festival Karma Wairagya</h1>
           <p>
             Festival Karma Wairagya merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar.
@@ -77,18 +80,18 @@
       <section id="poto">
         <div class="content">
           <div class="pic">
-            <img src="images/Foto1.JPG"/>
-            <img src="images/Foto2.JPG"/>
-            <img src="images/Foto3.JPG"/>
-            <img src="images/Foto4.JPG"/>
-            <img src="images/Foto5.JPG"/>
+            <img src="images/Foto1.JPG" loading="lazy"/>
+            <img src="images/Foto2.JPG" loading="lazy"/>
+            <img src="images/Foto3.JPG" loading="lazy"/>
+            <img src="images/Foto4.JPG" loading="lazy"/>
+            <img src="images/Foto5.JPG" loading="lazy"/>
           </div>
         </div>
       </section>
       <section id="tentang-kami"></section>
       <div class="hp"><img id="hp2"src="images/FKWElemen.png" alt=""></div>
       <section id="tentang">
-        <div class="left"><img src="images/FKWElemen.png" alt=""></div>
+        <div class="left"><img src="images/FKWElemen.png" loading="lazy"></div>
         <div class="right">
           <p>Festival Karma Wairagya (FKW) merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
             Tujuan lain diadakannya festival ini yaitu untuk meningkatkan kemampuan siswa dan siswi untuk berkreativitas, melestarikan dan menonjolkan nilai
@@ -101,7 +104,7 @@
 
         <div id="trabaju">
           <video autoplay loop muted controls id="transisi" src="videos/transisi.mp4"></video>
-          <img src="images/desainbaju.png" id="baju">
+          <img src="images/desainbaju.png" id="baju" loading="lazy">
         </div>
 
       <div id="galeri">
@@ -112,16 +115,16 @@
             <button id="prev-slide" class="slide-button material-symbols-rounded">chevron_left</button>
             <div class="album-list">
               <video autoplay loop muted controls id="yt-video" src="/videos/2022.mp4" alt= "itm-1" class="album-item"></video>
-              <img src="images/Foto.png" alt="itm-2" class="album-item">
-              <img src="images/Foto.png" alt="itm-3" class="album-item">
-              <img src="images/Foto.png" alt="itm-4" class="album-item">
-              <img src="images/Foto.png" alt="itm-5" class="album-item">
-              <img src="images/Foto.png" alt="itm-6" class="album-item">
-              <img src="images/Foto.png" alt="itm-7" class="album-item">
-              <img src="images/Foto.png" alt="itm-8" class="album-item">
-              <img src="images/Foto.png" alt="itm-9" class="album-item">
-              <img src="images/Foto.png" alt="itm-10" class="album-item">
-              <img src="images/Foto.png" alt="itm-11" class="album-item">
+              <img src="images/Foto.png" alt="itm-2" class="album-item" loading="lazy">
+              <img src="images/Foto.png" alt="itm-3" class="album-item" loading="lazy">
+              <img src="images/Foto.png" alt="itm-4" class="album-item" loading="lazy">
+              <img src="images/Foto.png" alt="itm-5" class="album-item" loading="lazy">
+              <img src="images/Foto.png" alt="itm-6" class="album-item" loading="lazy">
+              <img src="images/Foto.png" alt="itm-7" class="album-item" loading="lazy">
+              <img src="images/Foto.png" alt="itm-8" class="album-item" loading="lazy">
+              <img src="images/Foto.png" alt="itm-9" class="album-item" loading="lazy">
+              <img src="images/Foto.png" alt="itm-10" class="album-item" loading="lazy">
+              <img src="images/Foto.png" alt="itm-11" class="album-item" loading="lazy">
             </div>
             <button id="next-slide" class="slide-button material-symbols-rounded">chevron_right</button>
           </div>
@@ -136,16 +139,16 @@
             <button id="prev-slide2" class="slide-button2 material-symbols-rounded">chevron_left</button>
             <div class="album-list2">
               <video autoplay loop muted controls id="yt-video" src="/videos/2022.mp4" alt= "itm-1" class="album-item2"></video>
-              <img src="images/Foto.png" alt="itm-2" class="album-item2">
-              <img src="images/Foto.png" alt="itm-3" class="album-item2">
-              <img src="images/Foto.png" alt="itm-4" class="album-item2">
-              <img src="images/Foto.png" alt="itm-5" class="album-item2">
-              <img src="images/Foto.png" alt="itm-6" class="album-item2">
-              <img src="images/Foto.png" alt="itm-7" class="album-item2">
-              <img src="images/Foto.png" alt="itm-8" class="album-item2">
-              <img src="images/Foto.png" alt="itm-9" class="album-item2">
-              <img src="images/Foto.png" alt="itm-10" class="album-item2">
-              <img src="images/Foto.png" alt="itm-11" class="album-item2">
+              <img src="images/Foto.png" alt="itm-2" class="album-item2" loading="lazy">
+              <img src="images/Foto.png" alt="itm-3" class="album-item2" loading="lazy">
+              <img src="images/Foto.png" alt="itm-4" class="album-item2" loading="lazy">
+              <img src="images/Foto.png" alt="itm-5" class="album-item2" loading="lazy">
+              <img src="images/Foto.png" alt="itm-6" class="album-item2" loading="lazy">
+              <img src="images/Foto.png" alt="itm-7" class="album-item2" loading="lazy">
+              <img src="images/Foto.png" alt="itm-8" class="album-item2" loading="lazy">
+              <img src="images/Foto.png" alt="itm-9" class="album-item2" loading="lazy">
+              <img src="images/Foto.png" alt="itm-10" class="album-item2" loading="lazy">
+              <img src="images/Foto.png" alt="itm-11" class="album-item2" loading="lazy">
             </div>
             <button id="next-slide2" class="slide-button2 material-symbols-rounded">chevron_right</button>
           </div>
@@ -165,7 +168,7 @@
       <div id="contact" class="container">
         <div class="content">
           <div class="left">
-            <img src="images/FKWLogo .png" height="200px">
+            <img src="images/FKWLogo .png" height="200px" loading="lazy">
           </div>
 
           <div class="right">
@@ -207,5 +210,26 @@
     </footer>
 
     <script src="main.js"></script>
+    <script>
+      var loader = document.getElementById("pre-loader");
+      window.addEventListener("load", function(){
+          document.body.style.overflow = 'hidden';
+          loader.style.animation = "transitionIn 0.75s";
+          setTimeout(function(){
+            loader.style.display = "none";
+            document.body.style.overflow = '';
+          }, 750);
+        });
+    </script>
+
+    <script>
+      //Reset scroll top
+
+history.scrollRestoration = "manual";
+
+$(window).on('beforeunload', function(){
+    $(window).scrollTop(0);
+});
+    </script>
   </body>
 </html>
