Footage compressed, Support Bloggertheme

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="menu-icon">
-        <img src="images/menu-icon.svg" alt="" />
+        <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/menu-icon_pinipn.svg" alt="" />
       </div>
     </nav>
 
@@ -43,7 +43,7 @@
       <div class="container" id="beranda">
         <section>
         <div class="left">
-          <img src="images/FKWLogo .png" alt="Logo FKW" loading="lazy" id="logoheader"/>
+          <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" alt="Logo FKW" loading="lazy" id="logoheader"/>
           <h1>Festival Karma Wairagya</h1>
           <p>
             Festival Karma Wairagya merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar.
@@ -52,7 +52,7 @@
           <div class="buttons">
             <a href="https://www.instagram.com/festivalkarmawairagya" target="_blank" class="link-btn">
               <div class="btn-icon">
-                <img src="images/instagram-logo.svg" alt="" />
+                <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/instagram-logo_pfiwzf.svg" alt="" />
               </div>
               <div class="btn-text">
                 <div id="textbtn">Instagram</div>
@@ -61,7 +61,7 @@
 
             <a href="https://www.youtube.com/@festivalkarmawairagya" target="_blank" class="link-btn">
               <div class="btn-icon">
-                <img src="images/youtube-logo.svg" alt="" />
+                <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/youtube-logo_nxvwfj.svg" alt="" />
               </div>
               <div class="btn-text">
                 <div id="textbtn">Youtube</div>
@@ -71,7 +71,7 @@
         </div>
       </section>
         <div class="right">
-          <img src="images/FKWLogo .png" alt="FKW Logo" loading="lazy"  id="headerlogo" />
+          <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" alt="FKW Logo" loading="lazy"  id="headerlogo" />
         </div>
       </div>
     </header>
@@ -80,18 +80,18 @@
       <section id="poto">
         <div class="content">
           <div class="pic">
-            <img src="images/Foto1.JPG" loading="lazy" id="potoh"/>
-            <img src="images/Foto2.JPG" loading="lazy" id="potoh"/>
-            <img src="images/Foto3.JPG" loading="lazy" id="potoh"/>
-            <img src="images/Foto4.JPG" loading="lazy" id="potoh"/>
-            <img src="images/Foto5.JPG" loading="lazy" id="potoh"/>
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737019/Foto1_klsiy7.webp" loading="lazy" id="potoh"/>
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto2_l6k1za.webp" loading="lazy" id="potoh"/>
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto3_tgac0l.webp" loading="lazy" id="potoh"/>
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto4_pypgdd.webp" loading="lazy" id="potoh"/>
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto5_jfkykt.webp" loading="lazy" id="potoh"/>
           </div>
         </div>
       </section>
       <section id="tentang-kami"></section>
-      <div class="hp"><img id="hp2"src="images/FKWElemen.png" alt=""></div>
+      <div class="hp"><img id="hp2"src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/FKWElemen_gvoz2q.webp" alt=""></div>
       <section id="tentang">
-        <div class="left"><img src="images/FKWElemen.png" loading="lazy"></div>
+        <div class="left"><img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/FKWElemen_gvoz2q.webp" loading="lazy"></div>
         <div class="right">
           <p>Festival Karma Wairagya (FKW) merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
             Tujuan lain diadakannya festival ini yaitu untuk meningkatkan kemampuan siswa dan siswi untuk berkreativitas, melestarikan dan menonjolkan nilai
@@ -103,8 +103,8 @@
       </section>
 
         <div id="trabaju">
-          <div class="transisi"><video autoplay loop muted controls id="transisi" src="videos/transisi.mp4"></video></div>
-          <div class="baju"><img src="images/desainbaju.png" id="baju" loading="lazy"></div>
+          <div class="transisi"><video autoplay loop muted controls id="transisi" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737830/transisi_ilso4z.mp4"></video></div>
+          <div class="baju"><img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/desainbaju_x32f2v.webp" id="baju" loading="lazy"></div>
         </div>
 
       <div id="galeri">
@@ -114,17 +114,17 @@
           <div class="slider-wrapper">
             <button id="prev-slide" class="slide-button material-symbols-rounded">chevron_left</button>
             <div class="album-list">
-              <video autoplay loop muted controls id="yt-video" src="/videos/2022.mp4" alt= "itm-1" class="album-item"></video>
-              <img src="images/Foto.png" alt="itm-2" class="album-item" loading="lazy">
-              <img src="images/Foto.png" alt="itm-3" class="album-item" loading="lazy">
-              <img src="images/Foto.png" alt="itm-4" class="album-item" loading="lazy">
-              <img src="images/Foto.png" alt="itm-5" class="album-item" loading="lazy">
-              <img src="images/Foto.png" alt="itm-6" class="album-item" loading="lazy">
-              <img src="images/Foto.png" alt="itm-7" class="album-item" loading="lazy">
-              <img src="images/Foto.png" alt="itm-8" class="album-item" loading="lazy">
-              <img src="images/Foto.png" alt="itm-9" class="album-item" loading="lazy">
-              <img src="images/Foto.png" alt="itm-10" class="album-item" loading="lazy">
-              <img src="images/Foto.png" alt="itm-11" class="album-item" loading="lazy">
+              <video autoplay loop muted controls id="yt-video" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737833/2022_ok3azm.mp4" alt= "itm-1" class="album-item"></video>
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-2" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-3" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-4" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-5" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-6" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-7" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-8" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-9" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-10" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-11" class="album-item" loading="lazy">
             </div>
             <button id="next-slide" class="slide-button material-symbols-rounded">chevron_right</button>
           </div>
@@ -138,17 +138,17 @@
           <div class="slider-wrapper2">
             <button id="prev-slide2" class="slide-button2 material-symbols-rounded">chevron_left</button>
             <div class="album-list2">
-              <video autoplay loop muted controls id="yt-video" src="/videos/2022.mp4" alt= "itm-1" class="album-item2"></video>
-              <img src="images/Foto.png" alt="itm-2" class="album-item2" loading="lazy">
-              <img src="images/Foto.png" alt="itm-3" class="album-item2" loading="lazy">
-              <img src="images/Foto.png" alt="itm-4" class="album-item2" loading="lazy">
-              <img src="images/Foto.png" alt="itm-5" class="album-item2" loading="lazy">
-              <img src="images/Foto.png" alt="itm-6" class="album-item2" loading="lazy">
-              <img src="images/Foto.png" alt="itm-7" class="album-item2" loading="lazy">
-              <img src="images/Foto.png" alt="itm-8" class="album-item2" loading="lazy">
-              <img src="images/Foto.png" alt="itm-9" class="album-item2" loading="lazy">
-              <img src="images/Foto.png" alt="itm-10" class="album-item2" loading="lazy">
-              <img src="images/Foto.png" alt="itm-11" class="album-item2" loading="lazy">
+              <video autoplay loop muted controls id="yt-video" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737833/2022_ok3azm.mp4" alt= "itm-1" class="album-item2"></video>
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-2" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-3" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-4" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-5" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-6" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-7" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-8" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-9" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-10" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto_zlbozf.png" alt="itm-11" class="album-item2" loading="lazy">
             </div>
             <button id="next-slide2" class="slide-button2 material-symbols-rounded">chevron_right</button>
           </div>
@@ -168,7 +168,7 @@
       <div id="contact" class="container">
         <div class="content">
           <div class="left">
-            <img src="images/FKWLogo .png" loading="lazy" id="footerlogo">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" loading="lazy" id="footerlogo">
           </div>
 
           <div class="right">
@@ -231,6 +231,20 @@ $(window).on('beforeunload', function(){
     $(window).scrollTop(0);
 });
     </script>
+
+    <script>
+    document.addEventListener('DOMContentLoaded', () => {
+        var disclaimer = document.querySelector("img[alt='www.000webhost.com']");
+        if(disclaimer) {
+            disclaimer.remove();
+        }
+    });
+</script>
+
+<script>
+var objDiv = document.getElementsByTagName("body")[0];    
+objDiv.scrollTop = objDiv.scrollHeight; 
+</script>
 
   </body>
 </html>
