Fix responsive blogger, fix some font size

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -200,7 +200,7 @@
         </div>
 
         <div class="copyright">
-          <p>Designed by Tim Industri Digital FKW © 2024</p>
+          <p>Powered by Tim Industri Digital FKW © 2024</p>
           <div class="socials">
             <a href="https://www.instagram.com/festivalkarmawairagya" target="_blank"><img src="images/instagram-logo.svg" alt="" /></a>
             <a href="https://www.youtube.com/@festivalkarmawairagya" target="_blank"><img src="images/youtube-logo.svg" alt="" /></a>
