--- a/FKW/index.html
+++ b/FKW/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Festival Karma Wairagya merupakan festival yang dilaksanakan setahun sekali untuk memeriahkan HUT SMA Negeri 9 Denpasar">
+    <meta name="keywords" content="FKW, Festival Karma Wairagya, SMA Negeri 9 Denpasar">
+    <meta name="author" content="Satria Narayana">
     <title>FKW</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
